<resources>
    <string name="app_name">Online Shopping</string>
    <string name="action_settings">Settings</string>
    <string name="demo">Demo</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="searchs">Item Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_shopping__master">Shopping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="shoes">Shoes</string>
    <string name="menu_home">Home</string>
    <string name="my_order">My Order</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">Profile</string>
    <string name="todo">TODO</string>
    <string name="delivery_date_badge">Delivery Day</string>
    <string name="delivery_time_mock">2-3</string>
    <string name="delivery_date_mock">Dyas</string>
    <string name="deadline_badge">Issue</string>
    <string name="deadline_time_mock">Easy return available in case of any issue</string>
    <string name="returnPo">4 Days return Policy</string>
    <string name="charge">Delivery Charges</string>
    <string name="rs">₹:49</string>
    <string name="sizes">Indian Size</string>
    <string name="personal">Personal</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="price_details">Price Details</string>
    <string name="priceItem">Price</string>
    <string name="delivery_charge">Devilery</string>
    <string name="totel_amount">Amount Payable</string>
    <string name="qty">Qty :</string>
    <string name="return_policy">Return Policy</string>
    <string name="gotoHome">Order Now !!</string>
    <string name="order_now">Order Now</string>
    <string name="fashion">Fashionable Trendy Synthetic Shoe</string>
    <string name="return_po">4 Days Return Policy</string>
    <string name="prices">₹399</string>
    <string name="submit">Submit</string>
    <string name="de_address">Enter Delivery Address</string>
    <string name="logout">Logout</string>
    <string name="e_mail">E-Mail :</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="orderDate">Order Date</string>
    <string name="Daddress">Delivery Address</string>
    <string name="de_conform">Delivery Conform</string>
    <string name="returns">Return</string>
    <string name="cancel">Cancel</string>
    <string name="shpo">Shop</string>
    <string name="cash">-:  Cash On Delivery  :-</string>
</resources>
