<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ugc.onlineshoping.ui_view.all_fragmet.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.ugc.onlineshoping.ui_view.all_fragmet.OrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_order">
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.ugc.onlineshoping.ui_view.all_fragmet.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_cart">
        <argument
            android:name="user_id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ugc.onlineshoping.ui_view.all_fragmet.ProfileFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_profile" />

</navigation>