<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/loginLayout"
    android:gravity="center"
    tools:context=".ui_view.users.User_Login">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="#000"
        android:textColorHint="#000" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"/>


</LinearLayout>