<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".ui_view.users.User_Reg">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:hint="@string/mobileNumber"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="17sp" />



</LinearLayout>