<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:id="@+id/materials1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

   <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imagesThum1"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:scaleType="centerCrop"
                android:foregroundGravity="center"/>


        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp"
                    android:maxLines="2" />
            </RelativeLayout>


        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/delivery_date_badge"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/content_delivery_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_delivery_date_badge"
                    android:layout_alignStart="@id/content_delivery_date_badge"
                    android:layout_below="@id/content_delivery_date_badge"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_delivery_time"
                    android:layout_alignStart="@id/content_delivery_time"
                    android:layout_below="@id/content_delivery_time"
                    android:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <TextView
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charge"
                    android:textColor="@color/black"/>
                <TextView
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/rs"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_deadline_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/deadline_badge"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/content_deadline_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_deadline_badge"
                    android:layout_alignStart="@id/content_deadline_badge"
                    android:layout_below="@id/content_deadline_badge"
                    android:text="@string/deadline_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_deadline_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_deadline_time"
                    android:layout_alignStart="@id/content_deadline_time"
                    android:layout_below="@id/content_deadline_time"
                    android:text="@string/returnPo"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/size"
            style="@style/ContentMainBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/sizes"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/sizess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainTextColor"
            android:textSize="12sp"
            android:maxLines="2"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:src="@color/contentDividerLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center|start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_details"
                android:textAllCaps="true"
                android:padding="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center|start" />
            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:layout_weight="3"
                android:text="@string/qty"/>
            <Spinner
                android:id="@+id/qty_spinner"
                android:layout_width="65dp"
                android:paddingLeft="1dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/title_from_to_dots_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:src="@color/contentDividerLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="1dp">
            <TextView
                android:id="@+id/prices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceItem"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/item_price1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceItem"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:gravity="end"
                android:paddingRight="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/dd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_charge"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/d_charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceItem"
                android:layout_weight="2"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="end"
                android:paddingRight="16dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:src="@color/contentDividerLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/totel_amount"
                android:layout_weight="2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceItem"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:gravity="end"
                android:paddingEnd="16dp" />
        </LinearLayout>
        <Button
            android:id="@+id/orders"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_margin="7dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_orderbtn"/>
        <TextView
            style="@style/ContentMainBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="3dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/cash"
            android:textStyle="bold"/>

            <ImageView
                android:id="@+id/add_cart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center"
                android:layout_weight="1"
                android:background="@drawable/ic_add_shopping_cart_black_24dp"
                android:backgroundTint="@color/colorPrimary"
                android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>