<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="4dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="3">
            <ImageView
                android:id="@+id/item_image"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="3dp"
            android:layout_weight="2">
            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Demo"
                android:padding="2dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center|start">
                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_gravity="start|center"
                    android:padding="2dp"/>
                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:text="@string/qty"/>
                <Spinner
                    android:id="@+id/qty_spinner"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="2dp"
                android:src="@color/contentDividerLine" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_details"
                android:textAllCaps="true"
                android:padding="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="11sp"
                android:gravity="center|start" />
            <ImageView
                android:id="@+id/title_from_to_dots_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:src="@color/contentDividerLine" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="1dp">
                <TextView
                    android:id="@+id/prices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priceItem"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/item_price1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priceItem"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:paddingRight="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_charge"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/d_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priceItem"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:paddingRight="16dp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:src="@color/contentDividerLine" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totel_amount"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priceItem"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:paddingEnd="16dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>